Send ifs file to component-service
